src/client/components/forms/forms.css
:root {
  --form-select-caret: url('data:image/svg+xml;charset=UTF-8,%3csvg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 11 6"%3e%3cpath fill="%23070de9" d="M5.487 5.22L10.4.42H.573l4.914 4.8z" /%3e%3c/svg%3e');
  --form-select-caret-width: .6875rem; /* 11px */
}

label {
  margin-top: var(--spacing-small);
  display: block;
  font-family: var(--font-sans);
}

label > span {
  color: var(--html-blue);
}

label + label {
  margin-top: var(--spacing-medium);
}

input,
select,
textarea {
  margin-top: var(--spacing-tiny);
  padding: 0;
  display: block;
  width: 100%;
  border-bottom: 1px solid var(--html-blue);
}

input:focus,
select:focus,
textarea:focus {
  margin-bottom: -1px; /* Decrease the margin-bottom, to prevent jump caused by enlarged border */
  border-bottom-width: 2px;
  outline: none;
}

input.is-invalid,
select.is-invalid,
textarea.is-invalid {
  border-bottom-color: var(--soft-red);
}

select {
  border-radius: 0;

  /* Before and after's don't work on select elements, so that's why we're using a background for the caret */
  background: var(--form-select-caret);
  background-size: var(--form-select-caret-width);
  background-repeat: no-repeat;
  background-position: 100%;
  appearance: none;
}

::placeholder {
  color: var(--very-dim);
}

@media screen and (min-width: 1100px) {
  label {
    display: flex;
    align-items: center;
    flex-wrap: wrap;
  }

  label + label {
    margin-top: var(--spacing-small);
  }

  label > span {
    flex-shrink: 0;
    margin-right: var(--spacing-larger);
  }

  label > input,
  label > select {
    margin-top: 0;
    flex-shrink: 1;
    flex-grow: 1;
    width: auto;
  }

  label > textarea {
    flex-shrink: 0;
  }
}

